ajout images + fichier scss + utlisation de sass

--- a/index.html
+++ b/index.html
@@ -7,6 +7,20 @@
     <link rel="stylesheet" href="style.css" />
     <script src="https://kit.fontawesome.com/d3c7b83d91.js" crossorigin="anonymous"></script>
     <title>ohmyfood.yuko</title>
+
+    <!-- Place this data between the <head> tags of your website -->
+    <title>Page Title. Maximum length 60-70 characters</title>
+    <meta name="description" content="Looking for goods restaurants - Compose your own menu" />
+
+    <!-- Twitter Card data -->
+    <meta name="twitter:card" value="summary">
+
+    <!-- Open Graph data -->
+    <meta property="og:title" content="ohmyfood.Yuko" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="http://www.example.com/" />
+    <meta property="og:image" content="http://example.com/image.jpg" />
+    <meta property="og:description" content="Description Here" />
 </head>
 
 <body>
@@ -24,4 +38,53 @@
                 <p>Découvrez des restaurants d'exception, séléctionnés par nos soins</p>
                 <button>Explorer nos restaurants</button>
     </section>
+
+    <section class="steps">
+        <button>
+            <span>1</span>
+            <i class="fas fa-mobile-alt"></i>
+            <span>Choisissez un restaurant</span>
+        </button>
+        <button>
+            <span>2</span>
+            <i class="fas fa-list-ul"></i>
+            <span>Composez votre menu</span>
+        </button>
+        <button>
+            <span>3</span>
+            <i class="fas fa-store"></i>
+            <span>Dégustez au restaurant</span>
+        </button>
+    </section>
+    <section class="restaurants">
+        <div class="restaurant picture1">
+            <a href="#">
+                <h3>La palette du goût</h3>
+                <p>Ménilmontant</p>
+                <i class="far fa-heart"></i>
+            </a>
+        </div>
+        <div class="restaurant picture2">
+            <a href="#">
+                <h3>La note enchantée</h3>
+                <p>Charonne</p>
+                <i class="far fa-heart"></i>
+            </a>
+        </div>
+        <div class="restaurant picture3">
+            <h3>A la française</h3>
+            <p>Cité Rouge</p>
+            <i class="far fa-heart"></i>
+        </div>
+        <div class="restaurant picture4">
+            <a href="#">
+                <h3>Le délice des sens</h3>
+                <p>Folie-Méricourt</p>
+                <i class="far fa-heart"></i>
+            </a>
+        </div>
+    </section>
+    <footer>
+        <h3></h3>
+    </footer>
 </body>
