--- a/index.html
+++ b/index.html
@@ -34,29 +34,31 @@
     </section>
 
     <section class="explorer">
-        <h2>Réserver le menu qui<br />vous convient<h2>
-                <p>Découvrez des restaurants d'exception, séléctionnés par nos soins</p>
-                <button>Explorer nos restaurants</button>
+        <h2>Réserver le menu qui<br />vous convient</h2>
+        <p>Découvrez des restaurants d'exception,<br />séléctionnés par nos soins.</p>
+        <button>Explorer nos restaurants</button>
     </section>
 
     <section class="steps">
+        <h2>Fonctionnement</h2>
         <button>
-            <span>1</span>
+            <span class="step-number">1</span>
             <i class="fas fa-mobile-alt"></i>
             <span>Choisissez un restaurant</span>
         </button>
         <button>
-            <span>2</span>
+            <span class="step-number">2</span>
             <i class="fas fa-list-ul"></i>
             <span>Composez votre menu</span>
         </button>
         <button>
-            <span>3</span>
+            <span class="step-number">3</span>
             <i class="fas fa-store"></i>
             <span>Dégustez au restaurant</span>
         </button>
     </section>
     <section class="restaurants">
+        <h2>Restaurants</h2>
         <div class="restaurant picture1">
             <a href="#">
                 <h3>La palette du goût</h3>
@@ -72,9 +74,11 @@
             </a>
         </div>
         <div class="restaurant picture3">
-            <h3>A la française</h3>
-            <p>Cité Rouge</p>
-            <i class="far fa-heart"></i>
+            <a href="#">
+                <h3>A la française</h3>
+                <p>Cité Rouge</p>
+                <i class="far fa-heart"></i>
+            </a>
         </div>
         <div class="restaurant picture4">
             <a href="#">
