--- a/index.html
+++ b/index.html
@@ -59,36 +59,54 @@
     </section>
     <section class="restaurants">
         <h2>Restaurants</h2>
-        <div class="restaurant picture1">
+        <div class="restaurants__form">
             <a href="#">
-                <h3>La palette du goût</h3>
-                <p>Ménilmontant</p>
-                <i class="far fa-heart"></i>
+                <div class="restaurant__picture picture1"></div>
+                <div class="restaurant__describ">
+                    <h3>La palette du goût</h3>
+                    <p>Ménilmontant</p>
+                    <i class="far fa-heart"></i>
+                </div>
             </a>
         </div>
-        <div class="restaurant picture2">
+        <div class="restaurants__form">
             <a href="#">
-                <h3>La note enchantée</h3>
-                <p>Charonne</p>
-                <i class="far fa-heart"></i>
+                <div class="restaurant__picture picture2"></div>
+                <div class="restaurant__describ">
+                    <h3>La note enchantée</h3>
+                    <p>Charonne</p>
+                    <i class="far fa-heart"></i>
+                </div>
             </a>
         </div>
-        <div class="restaurant picture3">
+        <div class="restaurants__form">
             <a href="#">
-                <h3>A la française</h3>
-                <p>Cité Rouge</p>
-                <i class="far fa-heart"></i>
+                <div class="restaurant__picture picture3"></div>
+                <div class="restaurant__describ">
+                    <h3>A la française</h3>
+                    <p>Cité Rouge</p>
+                    <i class="far fa-heart"></i>
+                </div>
             </a>
         </div>
-        <div class="restaurant picture4">
+        <div class="restaurants__form">
             <a href="#">
-                <h3>Le délice des sens</h3>
-                <p>Folie-Méricourt</p>
-                <i class="far fa-heart"></i>
+                <div class="restaurant__picture picture4"></div>
+                <div class="restaurant__describ">
+                    <h3>Le délice des sens</h3>
+                    <p>Folie-Méricourt</p>
+                    <i class="far fa-heart"></i>
+                </div>
             </a>
         </div>
     </section>
     <footer>
-        <h3></h3>
+        <h3>ohmyfood</h3>
+        <ul>
+            <li><a href="#"><i class="fas fa-utensils"></i>Proposer un restaurant</a></li>
+            <li><a href="#"><i class="fas fa-hands-helping"></i>Devenir partenaire</a></li>
+            <li><a href="#">Mentions légales</a></li>
+            <li><a href="#">Contact</a></li>
+        </ul>
     </footer>
 </body>
