--- a/index.html
+++ b/index.html
@@ -43,17 +43,17 @@
         <h2>Fonctionnement</h2>
         <button>
             <span class="step-number">1</span>
-            <i class="fas fa-mobile-alt"></i>
+            <i class="step-icons fas fa-mobile-alt"></i>
             <span>Choisissez un restaurant</span>
         </button>
         <button>
             <span class="step-number">2</span>
-            <i class="fas fa-list-ul"></i>
+            <i class="step-icons fas fa-list-ul"></i>
             <span>Composez votre menu</span>
         </button>
         <button>
             <span class="step-number">3</span>
-            <i class="fas fa-store"></i>
+            <i class="step-icons fas fa-store"></i>
             <span>Dégustez au restaurant</span>
         </button>
     </section>
@@ -62,6 +62,7 @@
         <div class="restaurants__form">
             <a href="#">
                 <div class="restaurant__picture picture1"></div>
+                <span class="new">Nouveau</span>
                 <div class="restaurant__describ">
                     <h3>La palette du goût</h3>
                     <p>Ménilmontant</p>
@@ -72,6 +73,7 @@
         <div class="restaurants__form">
             <a href="#">
                 <div class="restaurant__picture picture2"></div>
+                <span class="new">Nouveau</span>
                 <div class="restaurant__describ">
                     <h3>La note enchantée</h3>
                     <p>Charonne</p>
