Animation du menu translate + fondu

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             </a>
         </div>
         <div class="restaurants__form">
-            <a href="#">
+            <a href="page1.html">
                 <div class="restaurant__picture picture3"></div>
                 <div class="restaurant__describ">
                     <h3>A la française</h3>
