--- a/page1.html
+++ b/page1.html
@@ -24,7 +24,7 @@
         <section class="menu">
             <h2 class="menu__part">entrées</h2>
             <div class="green-trait"></div>
-            <div class="food">
+            <div class="food food1">
                 <a href="#">
                     <h3>Tartare de poulpe acidulé</h3>
                     <div class="food__describ">
@@ -33,7 +33,7 @@
                     </div>
                 </a>
             </div>
-            <div class="food">
+            <div class="food food2">
                 <a href="#">
                     <h3>Velouté de légumes d'antan</h3>
                     <div class="food__describ">
@@ -42,7 +42,7 @@
                     </div>
                 </a>
             </div>
-            <div class="food">
+            <div class="food food3">
                 <a href="#">
                     <h3>Soupe à l'oignon</h3>
                     <div class="food__describ">
@@ -55,7 +55,7 @@
         <section class="menu">
             <h2 class="menu__part">plats</h2>
             <div class="green-trait"></div>
-            <div class="food">
+            <div class="food food4">
                 <a href="#">
                     <h3>Coquilles Saint-Jacques</h3>
                     <div class="food__describ">
@@ -64,7 +64,7 @@
                     </div>
                 </a>
             </div>
-            <div class="food">
+            <div class="food food5">
                 <a href="#">
                     <h3>Magret de canard</h3>
                     <div class="food__describ">
@@ -73,7 +73,7 @@
                     </div>
                 </a>
             </div>
-            <div class="food">
+            <div class="food food6">
                 <a href="#">
                     <h3>Pigeonneau d’Ille-et-Vilaine</h3>
                     <div class="food__describ">
@@ -86,7 +86,7 @@
         <section class="menu">
             <h2 class="menu__part">déssert</h2>
             <div class="green-trait"></div>
-            <div class="food">
+            <div class="food food7">
                 <a href="#">
                     <h3>Pétales de violettes glacés</h3>
                     <div class="food__describ">
@@ -95,7 +95,7 @@
                     </div>
                 </a>
             </div>
-            <div class="food">
+            <div class="food food8">
                 <a href="#">
                     <h3>Fondant au chocolat</h3>
                     <div class="food__describ">
@@ -104,7 +104,7 @@
                     </div>
                 </a>
             </div>
-            <div class="food">
+            <div class="food food9">
                 <a href="#">
                     <h3>Millefeuille croustillant</h3>
                     <div class="food__describ">
@@ -115,6 +115,7 @@
             </div>
         </section>
     </div>
+    <div class="order"><button>Commander</button></div>
     <footer>
         <h3>ohmyfood</h3>
         <ul>
