realisation de l'animation opacity 0 to 1 et translate Y pour chaque menu, trait vert et plat

--- a/page1.html
+++ b/page1.html
@@ -21,10 +21,10 @@
         </div>
     </div>
     <div class="background">
-        <section class="menu">
-            <h2 class="menu__part">entrées</h2>
+        <section class="menu menu--1">
+            <h2 class="menu__part green-trait--1">entrées</h2>
             <div class="green-trait"></div>
-            <div class="food food1">
+            <div class="food food--1">
                 <a href="#">
                     <h3>Tartare de poulpe acidulé</h3>
                     <div class="food__describ">
@@ -33,7 +33,7 @@
                     </div>
                 </a>
             </div>
-            <div class="food food2">
+            <div class="food food--2">
                 <a href="#">
                     <h3>Velouté de légumes d'antan</h3>
                     <div class="food__describ">
@@ -42,7 +42,7 @@
                     </div>
                 </a>
             </div>
-            <div class="food food3">
+            <div class="food food--3">
                 <a href="#">
                     <h3>Soupe à l'oignon</h3>
                     <div class="food__describ">
@@ -52,10 +52,10 @@
                 </a>
             </div>
         </section>
-        <section class="menu">
+        <section class="menu menu--2">
             <h2 class="menu__part">plats</h2>
-            <div class="green-trait"></div>
-            <div class="food food4">
+            <div class="green-trait green-trait--2"></div>
+            <div class="food food--4">
                 <a href="#">
                     <h3>Coquilles Saint-Jacques</h3>
                     <div class="food__describ">
@@ -64,7 +64,7 @@
                     </div>
                 </a>
             </div>
-            <div class="food food5">
+            <div class="food food--5">
                 <a href="#">
                     <h3>Magret de canard</h3>
                     <div class="food__describ">
@@ -73,7 +73,7 @@
                     </div>
                 </a>
             </div>
-            <div class="food food6">
+            <div class="food food--6">
                 <a href="#">
                     <h3>Pigeonneau d’Ille-et-Vilaine</h3>
                     <div class="food__describ">
@@ -83,10 +83,10 @@
                 </a>
             </div>
         </section>
-        <section class="menu">
+        <section class="menu menu--3">
             <h2 class="menu__part">déssert</h2>
-            <div class="green-trait"></div>
-            <div class="food food7">
+            <div class="green-trait green-trait--3"></div>
+            <div class="food food--7">
                 <a href="#">
                     <h3>Pétales de violettes glacés</h3>
                     <div class="food__describ">
@@ -95,7 +95,7 @@
                     </div>
                 </a>
             </div>
-            <div class="food food8">
+            <div class="food food--8">
                 <a href="#">
                     <h3>Fondant au chocolat</h3>
                     <div class="food__describ">
@@ -104,7 +104,7 @@
                     </div>
                 </a>
             </div>
-            <div class="food food9">
+            <div class="food food--9">
                 <a href="#">
                     <h3>Millefeuille croustillant</h3>
                     <div class="food__describ">
@@ -114,8 +114,9 @@
                 </a>
             </div>
         </section>
+        <div class="order"><button>Commander</button></div>
     </div>
-    <div class="order"><button>Commander</button></div>
+    
     <footer>
         <h3>ohmyfood</h3>
         <ul>
