--- a/index.html
+++ b/index.html
@@ -43,58 +43,58 @@
         <h2>Fonctionnement</h2>
         <button>
             <span class="step-number">1</span>
-            <i class="step-icons fas fa-mobile-alt"></i>
+            <i class="fas fa-mobile-alt"></i>
             <span>Choisissez un restaurant</span>
         </button>
         <button>
             <span class="step-number">2</span>
-            <i class="step-icons fas fa-list-ul"></i>
+            <i class="fas fa-list-ul"></i>
             <span>Composez votre menu</span>
         </button>
         <button>
             <span class="step-number">3</span>
-            <i class="step-icons fas fa-store"></i>
+            <i class="fas fa-store"></i>
             <span>Dégustez au restaurant</span>
         </button>
     </section>
-    <section class="restaurants">
+    <section class="restaurants-index">
         <h2>Restaurants</h2>
-        <div class="restaurants__form">
+        <div class="restaurants">
             <a href="#">
-                <div class="restaurant__picture picture1"></div>
+                <div class="restaurants__picture picture1"></div>
                 <span class="new">Nouveau</span>
-                <div class="restaurant__describ">
+                <div class="restaurants__describ">
                     <h3>La palette du goût</h3>
                     <p>Ménilmontant</p>
                     <i class="far fa-heart"></i>
                 </div>
             </a>
         </div>
-        <div class="restaurants__form">
+        <div class="restaurants">
             <a href="#">
-                <div class="restaurant__picture picture2"></div>
+                <div class="restaurants__picture picture2"></div>
                 <span class="new">Nouveau</span>
-                <div class="restaurant__describ">
+                <div class="restaurants__describ">
                     <h3>La note enchantée</h3>
                     <p>Charonne</p>
                     <i class="far fa-heart"></i>
                 </div>
             </a>
         </div>
-        <div class="restaurants__form">
+        <div class="restaurants">
             <a href="page1.html">
-                <div class="restaurant__picture picture3"></div>
-                <div class="restaurant__describ">
-                    <h3>A la française</h3>
+                <div class="restaurants__picture picture3"></div>
+                <div class="restaurants__describ">
+                    <h3>À la française</h3>
                     <p>Cité Rouge</p>
                     <i class="far fa-heart"></i>
                 </div>
             </a>
         </div>
-        <div class="restaurants__form">
+        <div class="restaurants">
             <a href="#">
-                <div class="restaurant__picture picture4"></div>
-                <div class="restaurant__describ">
+                <div class="restaurants__picture picture4"></div>
+                <div class="restaurants__describ">
                     <h3>Le délice des sens</h3>
                     <p>Folie-Méricourt</p>
                     <i class="far fa-heart"></i>
