--- a/page1.html
+++ b/page1.html
@@ -13,10 +13,10 @@
     <header>
         <h1>ohmyfood</h1>
     </header>
-    <div class="restaurants__style">
+    <div class="restaurant">
         <div class="restaurant__picture picture3"></div>
         <div class="restaurant__describ">
-            <h1 id="restaurant__name">A la française</h1>
+            <h1 id="restaurant__name">À la française</h1>
             <i class="far fa-heart"></i>
         </div>
     </div>
@@ -84,7 +84,7 @@
             </div>
         </section>
         <section class="menu menu--3">
-            <h2 class="menu__part">déssert</h2>
+            <h2 class="menu__part">dessert</h2>
             <div class="green-trait green-trait--3"></div>
             <div class="food food--7">
                 <a href="#">
