realisation du check rotate scale vert et translate prix sur :hover plats

--- a/page1.html
+++ b/page1.html
@@ -28,27 +28,37 @@
                 <a href="#">
                     <h3>Tartare de poulpe acidulé</h3>
                     <div class="food__describ">
-                        <div><p>Aux zestes d'orange</p></div>
-                        <div class="prix"><p>25€</p></div>
+                        <p>Aux zestes d'orange</p>
+                        <div class="prix">
+                            <p>25€</p>
+                        </div>
                     </div>
+                    <div class="validated"><i class="fas fa-check-circle"></i></div>
+                    
                 </a>
             </div>
             <div class="food food--2">
                 <a href="#">
                     <h3>Velouté de légumes d'antan</h3>
                     <div class="food__describ">
-                        <div><p>Carotte, panais, topinambour</p></div>
-                        <div class="prix"><p>35€</p></div>
+                        <p>Carotte, panais, topinambour</p>
+                        <div class="prix">
+                            <p>35€</p>
+                        </div>
                     </div>
+                    <div class="validated"><i class="fas fa-check-circle"></i></div>
                 </a>
             </div>
             <div class="food food--3">
                 <a href="#">
                     <h3>Soupe à l'oignon</h3>
                     <div class="food__describ">
-                        <div><p>Revisitée</p></div>
-                        <div class="prix"><p>20€</p></div>
+                        <p>Revisitée</p>
+                        <div class="prix">
+                            <p>20€</p>
+                        </div>
                     </div>
+                    <div class="validated"><i class="fas fa-check-circle"></i></div>
                 </a>
             </div>
         </section>
@@ -59,27 +69,36 @@
                 <a href="#">
                     <h3>Coquilles Saint-Jacques</h3>
                     <div class="food__describ">
-                        <div><p>Accompagnées d'une purée de panais</p></div>
-                        <div class="prix"><p>40€</p></div>
+                        <p>Accompagnées d'une purée de panais</p>
+                        <div class="prix">
+                            <p>40€</p>
+                        </div>
                     </div>
+                    <div class="validated"><i class="fas fa-check-circle"></i></div>
                 </a>
             </div>
             <div class="food food--5">
                 <a href="#">
                     <h3>Magret de canard</h3>
                     <div class="food__describ">
-                        <div><p>Et parmentier de pommes de terre</p></div>
-                        <div class="prix"><p>35€</p></div>
+                        <p>Et parmentier de pommes de terre</p>
+                        <div class="prix">
+                            <p>35€</p>
+                        </div>
                     </div>
+                    <div class="validated"><i class="fas fa-check-circle"></i></div>
                 </a>
             </div>
             <div class="food food--6">
                 <a href="#">
                     <h3>Pigeonneau d’Ille-et-Vilaine</h3>
                     <div class="food__describ">
-                        <div><p>Sur son lit de gnocchis aux légumes</p></div>
-                        <div class="prix"><p>44€</p></div>
+                        <p>Sur son lit de gnocchis aux légumes</p>
+                        <div class="prix">
+                            <p>44€</p>
+                        </div>
                     </div>
+                    <div class="validated"><i class="fas fa-check-circle"></i></div>
                 </a>
             </div>
         </section>
@@ -90,33 +109,42 @@
                 <a href="#">
                     <h3>Pétales de violettes glacés</h3>
                     <div class="food__describ">
-                        <div><p>Et purée de noisettes</p></div>
-                        <div class="prix"><p>18€</p></div>
+                        <p>Et purée de noisettes</p>
+                        <div class="prix">
+                            <p>18€</p>
+                        </div>
                     </div>
+                    <div class="validated"><i class="fas fa-check-circle"></i></div>
                 </a>
             </div>
             <div class="food food--8">
                 <a href="#">
                     <h3>Fondant au chocolat</h3>
                     <div class="food__describ">
-                        <div><p>Revisité</p></div>
-                        <div class="prix"><p>22€</p></div>
+                        <p>Revisité</p>
+                        <div class="prix">
+                            <p>22€</p>
+                        </div>
                     </div>
+                    <div class="validated"><i class="fas fa-check-circle"></i></div>
                 </a>
             </div>
             <div class="food food--9">
                 <a href="#">
                     <h3>Millefeuille croustillant</h3>
                     <div class="food__describ">
-                        <div><p>Myrtilles et pâte d’amande</p></div>
-                        <div class="prix"><p>23€</p></div>
+                        <p>Myrtilles et pâte d’amande</p>
+                        <div class="prix">
+                            <p>23€</p>
+                        </div>
                     </div>
+                    <div class="validated"><i class="fas fa-check-circle"></i></div>
                 </a>
             </div>
         </section>
         <div class="order"><button>Commander</button></div>
     </div>
-    
+
     <footer>
         <h3>ohmyfood</h3>
         <ul>
