--- a/page1.html
+++ b/page1.html
@@ -12,6 +12,7 @@
 <body>
     <header>
         <h1>ohmyfood</h1>
+        <a href="index.html"><i class="fas fa-arrow-left"></i></a>
     </header>
     <div class="restaurant">
         <div class="restaurant__picture picture3"></div>
@@ -25,133 +26,114 @@
             <h2 class="menu__part green-trait--1">entrées</h2>
             <div class="green-trait"></div>
             <div class="food food--1">
-                <a href="#">
+                <div class="food__describ">
                     <h3>Tartare de poulpe acidulé</h3>
-                    <div class="food__describ">
-                        <p>Aux zestes d'orange</p>
-                        <div class="prix">
-                            <p>25€</p>
-                        </div>
-                    </div>
-                    <div class="validated"><i class="fas fa-check-circle"></i></div>
-                    
-                </a>
+                    <p>Aux zestes zestes d'orange d'orange zestes d'orange</p>
+                </div>
+                <div class="prix">
+                    <p>25€</p>
+                </div>
+                <div class="checked"><i class="fas fa-check-circle"></i></div>
             </div>
             <div class="food food--2">
-                <a href="#">
+                <div class="food__describ">
                     <h3>Velouté de légumes d'antan</h3>
-                    <div class="food__describ">
-                        <p>Carotte, panais, topinambour</p>
-                        <div class="prix">
-                            <p>35€</p>
-                        </div>
-                    </div>
-                    <div class="validated"><i class="fas fa-check-circle"></i></div>
-                </a>
+                    <p>Carotte, panais, topinambour</p>
+                </div>
+                <div class="prix">
+                    <p>35€</p>
+                </div>
+                <div class="checked"><i class="fas fa-check-circle"></i></div>
             </div>
             <div class="food food--3">
-                <a href="#">
+                <div class="food__describ">
                     <h3>Soupe à l'oignon</h3>
-                    <div class="food__describ">
-                        <p>Revisitée</p>
-                        <div class="prix">
-                            <p>20€</p>
-                        </div>
-                    </div>
-                    <div class="validated"><i class="fas fa-check-circle"></i></div>
-                </a>
+                    <p>Revisitée</p>
+                </div>
+                <div class="prix">
+                    <p>20€</p>
+                </div>
+                <div class="checked"><i class="fas fa-check-circle"></i></div>
             </div>
         </section>
         <section class="menu menu--2">
             <h2 class="menu__part">plats</h2>
             <div class="green-trait green-trait--2"></div>
             <div class="food food--4">
-                <a href="#">
+                <div class="food__describ">
                     <h3>Coquilles Saint-Jacques</h3>
-                    <div class="food__describ">
-                        <p>Accompagnées d'une purée de panais</p>
-                        <div class="prix">
-                            <p>40€</p>
-                        </div>
-                    </div>
-                    <div class="validated"><i class="fas fa-check-circle"></i></div>
-                </a>
+                    <p>Accompagnées d'une purée de panais</p>
+                </div>
+                <div class="prix">
+                    <p>40€</p>
+                </div>
+                <div class="checked"><i class="fas fa-check-circle"></i></div>
             </div>
             <div class="food food--5">
-                <a href="#">
+                <div class="food__describ">
                     <h3>Magret de canard</h3>
-                    <div class="food__describ">
-                        <p>Et parmentier de pommes de terre</p>
-                        <div class="prix">
-                            <p>35€</p>
-                        </div>
-                    </div>
-                    <div class="validated"><i class="fas fa-check-circle"></i></div>
-                </a>
+                    <p>Et parmentier de pommes de terre</p>
+                </div>
+                <div class="prix">
+                    <p>35€</p>
+                </div>
+                <div class="checked"><i class="fas fa-check-circle"></i></div>
             </div>
             <div class="food food--6">
-                <a href="#">
+                <div class="food__describ">
                     <h3>Pigeonneau d’Ille-et-Vilaine</h3>
-                    <div class="food__describ">
-                        <p>Sur son lit de gnocchis aux légumes</p>
-                        <div class="prix">
-                            <p>44€</p>
-                        </div>
-                    </div>
-                    <div class="validated"><i class="fas fa-check-circle"></i></div>
-                </a>
+                    <p>Sur son lit de gnocchis aux légumes</p>
+                </div>
+                <div class="prix">
+                    <p>44€</p>
+                </div>
+                <div class="checked"><i class="fas fa-check-circle"></i></div>
             </div>
         </section>
         <section class="menu menu--3">
             <h2 class="menu__part">dessert</h2>
             <div class="green-trait green-trait--3"></div>
             <div class="food food--7">
-                <a href="#">
+                <div class="food__describ">
                     <h3>Pétales de violettes glacés</h3>
-                    <div class="food__describ">
-                        <p>Et purée de noisettes</p>
-                        <div class="prix">
-                            <p>18€</p>
-                        </div>
-                    </div>
-                    <div class="validated"><i class="fas fa-check-circle"></i></div>
-                </a>
+                    <p>Et purée de noisettes</p>
+                </div>
+                <div class="prix">
+                    <p>18€</p>
+                </div>
+                <div class="checked"><i class="fas fa-check-circle"></i></div>
             </div>
             <div class="food food--8">
-                <a href="#">
+                <div class="food__describ">
                     <h3>Fondant au chocolat</h3>
-                    <div class="food__describ">
-                        <p>Revisité</p>
-                        <div class="prix">
-                            <p>22€</p>
-                        </div>
-                    </div>
-                    <div class="validated"><i class="fas fa-check-circle"></i></div>
-                </a>
+                    <p>Revisité</p>
+                </div>
+                <div class="prix">
+                    <p>22€</p>
+                </div>
+                <div class="checked"><i class="fas fa-check-circle"></i></div>
             </div>
             <div class="food food--9">
-                <a href="#">
+                <div class="food__describ">
                     <h3>Millefeuille croustillant</h3>
-                    <div class="food__describ">
-                        <p>Myrtilles et pâte d’amande</p>
-                        <div class="prix">
-                            <p>23€</p>
-                        </div>
-                    </div>
-                    <div class="validated"><i class="fas fa-check-circle"></i></div>
-                </a>
+                    <p>Myrtilles et pâte d’amande</p>
+                </div>
+                <div class="prix">
+                    <p>23€</p>
+                </div>
+                <div class="checked"><i class="fas fa-check-circle"></i></div>
             </div>
         </section>
-        <div class="order"><button>Commander</button></div>
-    </div>
 
-    <footer>
-        <h3>ohmyfood</h3>
-        <ul>
-            <li><a href="#"><i class="fas fa-utensils"></i>Proposer un restaurant</a></li>
-            <li><a href="#"><i class="fas fa-hands-helping"></i>Devenir partenaire</a></li>
-            <li><a href="#">Mentions légales</a></li>
-            <li><a href="#">Contact</a></li>
-        </ul>
-    </footer>
+        <div class="order"><button>Commander</button></div>
+
+        <footer>
+            <h3>ohmyfood</h3>
+            <ul>
+                <li><a href="#"><i class="fas fa-utensils"></i>Proposer un restaurant</a></li>
+                <li><a href="#"><i class="fas fa-hands-helping"></i>Devenir partenaire</a></li>
+                <li><a href="#">Mentions légales</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+        </footer>
 </body>
