Realisation de toutes les pages restaurants + creation de breakpoint responsive style

--- a/index.html
+++ b/index.html
@@ -41,65 +41,79 @@
 
     <section class="steps">
         <h2>Fonctionnement</h2>
-        <button>
-            <span class="step-number">1</span>
-            <i class="fas fa-mobile-alt"></i>
-            <span>Choisissez un restaurant</span>
-        </button>
-        <button>
-            <span class="step-number">2</span>
-            <i class="fas fa-list-ul"></i>
-            <span>Composez votre menu</span>
-        </button>
-        <button>
-            <span class="step-number">3</span>
-            <i class="fas fa-store"></i>
-            <span>Dégustez au restaurant</span>
-        </button>
+        <div class="flex-buttons">
+            <button>
+                <span class="step-number">1</span>
+                <i class="fas fa-mobile-alt"></i>
+                <span>Choisissez un restaurant</span>
+            </button>
+            <button>
+                <span class="step-number">2</span>
+                <i class="fas fa-list-ul"></i>
+                <span>Composez votre menu</span>
+            </button>
+            <button>
+                <span class="step-number">3</span>
+                <i class="fas fa-store"></i>
+                <span>Dégustez au restaurant</span>
+            </button>
+        </div>
     </section>
     <section class="restaurants-index">
         <h2>Restaurants</h2>
-        <div class="restaurants">
-            <a href="#">
-                <div class="restaurants__picture picture1"></div>
-                <span class="new">Nouveau</span>
-                <div class="restaurants__describ">
-                    <h3>La palette du goût</h3>
-                    <p>Ménilmontant</p>
-                    <i class="far fa-heart"></i>
-                </div>
-            </a>
+        <div class="media-flex-retaurants">
+            <div class="part">
+                <a href="page1.html">
+                    <div class="restaurants">
+                        <div class="restaurants__picture picture1"></div>
+                        <span class="new">Nouveau</span>
+                        <div class="restaurants__describ">
+                            <h3>La palette du goût</h3>
+                            <p>Ménilmontant</p>
+                            <i class="far fa-heart"></i>
+                        </div>
+                    </div>
+                </a>
+            </div>
+            <div class="part">
+                <a href="page2.html">
+                    <div class="restaurants">
+                        <div class="restaurants__picture picture2"></div>
+                        <span class="new">Nouveau</span>
+                        <div class="restaurants__describ">
+                            <h3>La note enchantée</h3>
+                            <p>Charonne</p>
+                            <i class="far fa-heart"></i>
+                        </div>
+                    </div>
+                </a>
+            </div>
         </div>
-        <div class="restaurants">
-            <a href="#">
-                <div class="restaurants__picture picture2"></div>
-                <span class="new">Nouveau</span>
-                <div class="restaurants__describ">
-                    <h3>La note enchantée</h3>
-                    <p>Charonne</p>
-                    <i class="far fa-heart"></i>
-                </div>
-            </a>
-        </div>
-        <div class="restaurants">
-            <a href="page1.html">
-                <div class="restaurants__picture picture3"></div>
-                <div class="restaurants__describ">
-                    <h3>À la française</h3>
-                    <p>Cité Rouge</p>
-                    <i class="far fa-heart"></i>
-                </div>
-            </a>
-        </div>
-        <div class="restaurants">
-            <a href="#">
-                <div class="restaurants__picture picture4"></div>
-                <div class="restaurants__describ">
-                    <h3>Le délice des sens</h3>
-                    <p>Folie-Méricourt</p>
-                    <i class="far fa-heart"></i>
-                </div>
-            </a>
+        <div class="media-flex-retaurants">
+            <div class="part">
+                <a href="page3.html">
+                    <div class="restaurants">
+                        <div class="restaurants__picture picture3"></div>
+                        <div class="restaurants__describ">
+                            <h3>À la française</h3>
+                            <p>Cité Rouge</p>
+                            <i class="far fa-heart"></i>
+                        </div>
+                    </div>
+                </a>
+            </div>
+            <div class="part">
+                <a href="page4.html">
+                    <div class="restaurants">
+                        <div class="restaurants__picture picture4"></div>
+                        <div class="restaurants__describ">
+                            <h3>Le délice des sens</h3>
+                            <p>Folie-Méricourt</p>
+                            <i class="far fa-heart"></i>
+                        </div>
+                    </div>
+                </a>
+            </div>
         </div>
     </section>
     <footer>
