--- a/page2.html
+++ b/page2.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="style.css" />
     <script src="https://kit.fontawesome.com/d3c7b83d91.js" crossorigin="anonymous"></script>
-    <title>ohmyfood - La Palette du Goût</title>
+    <title>ohmyfood - La Note Enchantée</title>
 </head>
 
 <body>
@@ -15,9 +15,9 @@
         <a href="index.html"><i class="fas fa-arrow-left"></i></a>
     </header>
     <div class="restaurant">
-        <div class="restaurant__picture picture1"></div>
+        <div class="restaurant__picture picture2"></div>
         <div class="restaurant__describ">
-            <h1 id="restaurant__name">La palette du goût</h1>
+            <h1 id="restaurant__name">La note enchantée</h1>
             <i class="far fa-heart"></i>
         </div>
     </div>
@@ -28,8 +28,8 @@
                 <div class="green-trait"></div>
                 <div class="food food--1">
                     <div class="food__describ">
-                        <h3>Fricassée d'escargot</h3>
-                        <p>Au piment d'Espelette</p>
+                        <h3>Ravioles de foie gras </h3>
+                        <p>Accompagnés de leur crème à la truffe</p>
                     </div>
                     <div class="prix">
                         <p>25€</p>
@@ -38,8 +38,8 @@
                 </div>
                 <div class="food food--2">
                     <div class="food__describ">
-                        <h3>Foie gras de canard mi-cuit</h3>
-                        <p>Et ses copeaux de truffe noire</p>
+                        <h3>Caviar osciètre </h3>
+                        <p>Sur blini à la farine de blé noir</p>
                     </div>
                     <div class="prix">
                         <p>35€</p>
@@ -48,42 +48,53 @@
                 </div>
                 <div class="food food--3">
                     <div class="food__describ">
-                        <h3>Oeuf au plat</h3>
-                        <p>Assaisonné à la truffe sur lit de caviar</p>
+                        <h3>Homard et espuma de potiron</h3>
+                        <p>Mariné aux zestes d'orange</p>
                     </div>
                     <div class="prix">
                         <p>20€</p>
                     </div>
                     <div class="checked"><i class="fas fa-check-circle"></i></div>
                 </div>
-            </section>
-            <section class="menu menu--2">
-                <h2 class="menu__part">plats</h2>
-                <div class="green-trait green-trait--2"></div>
                 <div class="food food--4">
                     <div class="food__describ">
-                        <h3>Filet de boeuf aux herbes</h3>
-                        <p>Accompagné de sa ribambelle de légumes</p>
-                    </div>
-                    <div class="prix">
-                        <p>40€</p>
-                    </div>
-                    <div class="checked"><i class="fas fa-check-circle"></i></div>
-                </div>
-                <div class="food food--5">
-                    <div class="food__describ">
-                        <h3>Parmentier de queue de boeuf</h3>
-                        <p>À la truffe noire sur sa purée de panais</p>
+                        <h3>Foie gras de canard cuit entier</h3>
+                        <p>Confiture de figue et pain toasté</p>
                     </div>
                     <div class="prix">
                         <p>35€</p>
                     </div>
                     <div class="checked"><i class="fas fa-check-circle"></i></div>
                 </div>
+
+            </section>
+            <section class="menu menu--2">
+                <h2 class="menu__part">plats</h2>
+                <div class="green-trait green-trait--2"></div>
+                <div class="food food--5">
+                    <div class="food__describ">
+                        <h3>Noix de coquilles Saint-Jacques</h3>
+                        <p>Sur lit de purée de céleri-rave</p>
+                    </div>
+                    <div class="prix">
+                        <p>40€</p>
+                    </div>
+                    <div class="checked"><i class="fas fa-check-circle"></i></div>
+                </div>
                 <div class="food food--6">
                     <div class="food__describ">
-                        <h3>Filet de turbot</h3>
-                        <p>Aux agrumes</p>
+                        <h3>Langoustine poêlée</h3>
+                        <p>Purée de patate douce</p>
+                    </div>
+                    <div class="prix">
+                        <p>35€</p>
+                    </div>
+                    <div class="checked"><i class="fas fa-check-circle"></i></div>
+                </div>
+                <div class="food food--7">
+                    <div class="food__describ">
+                        <h3>Mijoté de queue de boeuf</h3>
+                        <p>Et riz sauvage aux zestes de citron</p>
                     </div>
                     <div class="prix">
                         <p>44€</p>
@@ -94,30 +105,30 @@
             <section class="menu menu--3">
                 <h2 class="menu__part">dessert</h2>
                 <div class="green-trait green-trait--3"></div>
-                <div class="food food--7">
+                <div class="food food--8">
                     <div class="food__describ">
-                        <h3>Paris-Brest</h3>
-                        <p>Revisité</p>
+                        <h3>Macaron noisette et chocolat</h3>
+                        <p>Glace au caramel brun et sel de Guérande</p>
                     </div>
                     <div class="prix">
                         <p>18€</p>
                     </div>
                     <div class="checked"><i class="fas fa-check-circle"></i></div>
                 </div>
-                <div class="food food--8">
+                <div class="food food--9">
                     <div class="food__describ">
-                        <h3>Macaron au chocolat d'exception </h3>
-                        <p>Et glace à la vanille de Madagascar</p>
+                        <h3>Baba au rhum revisité</h3>
+                        <p>Avec son coulis de citron</p>
                     </div>
                     <div class="prix">
                         <p>22€</p>
                     </div>
                     <div class="checked"><i class="fas fa-check-circle"></i></div>
                 </div>
-                <div class="food food--9">
+                <div class="food food--10">
                     <div class="food__describ">
-                        <h3>Mousse au chocolat </h3>
-                        <p>Au piment d'Espelette et à la truffe noire</p>
+                        <h3>Tarte au citron meringuée</h3>
+                        <p>Déstructurée</p>
                     </div>
                     <div class="prix">
                         <p>23€</p>
@@ -136,6 +147,5 @@
             <li><a href="#">Mentions légales</a></li>
             <li><a href="#">Contact</a></li>
         </ul>
-        </footer>
     </footer>
 </body>
