--- a/page4.html
+++ b/page4.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="style.css" />
     <script src="https://kit.fontawesome.com/d3c7b83d91.js" crossorigin="anonymous"></script>
-    <title>ohmyfood - La Palette du Goût</title>
+    <title>ohmyfood - Le Délice Des Dens</title>
 </head>
 
 <body>
@@ -15,9 +15,9 @@
         <a href="index.html"><i class="fas fa-arrow-left"></i></a>
     </header>
     <div class="restaurant">
-        <div class="restaurant__picture picture1"></div>
+        <div class="restaurant__picture picture4"></div>
         <div class="restaurant__describ">
-            <h1 id="restaurant__name">La palette du goût</h1>
+            <h1 id="restaurant__name">Le délice des sens</h1>
             <i class="far fa-heart"></i>
         </div>
     </div>
@@ -28,8 +28,8 @@
                 <div class="green-trait"></div>
                 <div class="food food--1">
                     <div class="food__describ">
-                        <h3>Fricassée d'escargot</h3>
-                        <p>Au piment d'Espelette</p>
+                        <h3>Tartare de thon</h3>
+                        <p>Assaisonné au yuzu</p>
                     </div>
                     <div class="prix">
                         <p>25€</p>
@@ -38,8 +38,8 @@
                 </div>
                 <div class="food food--2">
                     <div class="food__describ">
-                        <h3>Foie gras de canard mi-cuit</h3>
-                        <p>Et ses copeaux de truffe noire</p>
+                        <h3>Bouchée de homard croustillant</h3>
+                        <p>Et sa farandole de petits légumes</p>
                     </div>
                     <div class="prix">
                         <p>35€</p>
@@ -48,8 +48,8 @@
                 </div>
                 <div class="food food--3">
                     <div class="food__describ">
-                        <h3>Oeuf au plat</h3>
-                        <p>Assaisonné à la truffe sur lit de caviar</p>
+                        <h3>Velouté de cèpes </h3>
+                        <p>Aux truffes</p>
                     </div>
                     <div class="prix">
                         <p>20€</p>
@@ -62,8 +62,8 @@
                 <div class="green-trait green-trait--2"></div>
                 <div class="food food--4">
                     <div class="food__describ">
-                        <h3>Filet de boeuf aux herbes</h3>
-                        <p>Accompagné de sa ribambelle de légumes</p>
+                        <h3>Poulet rôti aux herbes de Provence </h3>
+                        <p>Et sa crème de truffe</p>
                     </div>
                     <div class="prix">
                         <p>40€</p>
@@ -72,8 +72,8 @@
                 </div>
                 <div class="food food--5">
                     <div class="food__describ">
-                        <h3>Parmentier de queue de boeuf</h3>
-                        <p>À la truffe noire sur sa purée de panais</p>
+                        <h3>Langouste rôtie </h3>
+                        <p>Et ses légumes de saison</p>
                     </div>
                     <div class="prix">
                         <p>35€</p>
@@ -82,8 +82,8 @@
                 </div>
                 <div class="food food--6">
                     <div class="food__describ">
-                        <h3>Filet de turbot</h3>
-                        <p>Aux agrumes</p>
+                        <h3>Côte de boeuf Angus </h3>
+                        <p>Et sa purée de panais</p>
                     </div>
                     <div class="prix">
                         <p>44€</p>
@@ -96,8 +96,8 @@
                 <div class="green-trait green-trait--3"></div>
                 <div class="food food--7">
                     <div class="food__describ">
-                        <h3>Paris-Brest</h3>
-                        <p>Revisité</p>
+                        <h3>Farandole de desserts</h3>
+                        <p>Du chef</p>
                     </div>
                     <div class="prix">
                         <p>18€</p>
@@ -106,8 +106,8 @@
                 </div>
                 <div class="food food--8">
                     <div class="food__describ">
-                        <h3>Macaron au chocolat d'exception </h3>
-                        <p>Et glace à la vanille de Madagascar</p>
+                        <h3>Crème brulée </h3>
+                        <p>Revisité</p>
                     </div>
                     <div class="prix">
                         <p>22€</p>
@@ -116,8 +116,8 @@
                 </div>
                 <div class="food food--9">
                     <div class="food__describ">
-                        <h3>Mousse au chocolat </h3>
-                        <p>Au piment d'Espelette et à la truffe noire</p>
+                        <h3>Tiramisu </h3>
+                        <p>À la noisette</p>
                     </div>
                     <div class="prix">
                         <p>23€</p>
@@ -136,6 +136,5 @@
             <li><a href="#">Mentions légales</a></li>
             <li><a href="#">Contact</a></li>
         </ul>
-        </footer>
     </footer>
 </body>
