realisation d'un spinner de chargement

--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
     <meta property="og:description" content="Description Here" />
 </head>
 
-<body>
+<div class="spinner">
+
     <header>
         <h1>ohmyfood</h1>
     </header>
@@ -125,4 +126,5 @@
             <li><a href="#">Contact</a></li>
         </ul>
     </footer>
-</body>
+    </div>
+    </body>
