--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>ohmyfood.yuko</title>
 
     <!-- Place this data between the <head> tags of your website -->
-    <title>Page Title. Maximum length 60-70 characters</title>
+    <title>ohmyfood</title>
     <meta name="description" content="Looking for goods restaurants - Compose your own menu" />
 
     <!-- Twitter Card data -->
@@ -25,7 +25,7 @@
 
 <div class="spinner">
 
-    <header>
+    <header class="title">
         <h1>ohmyfood</h1>
     </header>
 
@@ -123,7 +123,7 @@
             <li><a href="#"><i class="fas fa-utensils"></i>Proposer un restaurant</a></li>
             <li><a href="#"><i class="fas fa-hands-helping"></i>Devenir partenaire</a></li>
             <li><a href="#">Mentions légales</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="mailto:ohmyfood@gmail.com">Contact</a></li>
         </ul>
     </footer>
     </div>
