correction erreurs 3wc html dans header et les meta

--- a/index.html
+++ b/index.html
@@ -16,16 +16,16 @@
     <meta name="twitter:card" value="summary">
 
     <!-- Open Graph data -->
-    <meta property="og:title" content="ohmyfood.Yuko" />
+    <meta property="og:title" content="ohmyfood" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="http://www.example.com/" />
-    <meta property="og:image" content="http://example.com/image.jpg" />
-    <meta property="og:description" content="Description Here" />
+    <meta property="og:url" content="https://dav-yuko.github.io/DavidAldrin_3_13092021/" />
+    <meta property="og:image" content="https://github.com/Dav-Yuko/DavidAldrin_3_13092021/blob/main/images/logo.png" />
+    <meta property="og:description" content="Looking for goods restaurants - Compose your own menu" />
 </head>
 
 <div class="spinner">
 
-    <header class="title">
+    <header class="spinner__background">
         <h1>ohmyfood</h1>
     </header>
 
