correction des erreurs après contrôle w3c css

--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
     <title>ohmyfood.yuko</title>
 
     <!-- Place this data between the <head> tags of your website -->
-    <title>ohmyfood</title>
-    <meta name="description" content="Looking for goods restaurants - Compose your own menu" />
+    
+    <meta name="description" content="Looking for goods restaurants - Compose your own menu"/>
 
     <!-- Twitter Card data -->
-    <meta name="twitter:card" value="summary">
+    <meta name="twitter:card" content="ohmyfood">
 
     <!-- Open Graph data -->
     <meta property="og:title" content="ohmyfood" />
