--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <section class="explorer">
         <h2>Réserver le menu qui<br />vous convient</h2>
         <p>Découvrez des restaurants d'exception,<br />séléctionnés par nos soins.</p>
-        <button>Explorer nos restaurants</button>
+        <a href="#ancre-explorer"><button>Explorer nos restaurants</button></a>
     </section>
 
     <section class="steps">
@@ -61,7 +61,7 @@
         </div>
     </section>
     <section class="restaurants-index">
-        <h2>Restaurants</h2>
+        <h2 id="ancre-explorer">Restaurants</h2>
         <div class="media-flex-retaurants">
             <div class="part">
                 <a href="page1.html">
