correction ancre bouton suite a w3c

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <section class="explorer">
         <h2>Réserver le menu qui<br />vous convient</h2>
         <p>Découvrez des restaurants d'exception,<br />séléctionnés par nos soins.</p>
-        <a href="#ancre-explorer"><button>Explorer nos restaurants</button></a>
+        <button>Explorer nos restaurants</button>
     </section>
 
     <section class="steps">
