--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         </div>
     </section>
     <section class="restaurants-index">
-        <h2 id="ancre-explorer">Restaurants</h2>
+        <h2>Restaurants</h2>
         <div class="media-flex-retaurants">
             <div class="part">
                 <a href="page1.html">
